# PoSim

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: asset.h  common.h  lv_conf.h
src/: CMakeLists.txt  main.cpp  utility.cpp  utility.h
src/core/eventloop/: eventloop.cpp  eventloop.h
src/core/stateMachine/: core.cpp  core.h  event.cpp  event.h  state.cpp  state.h
src/core/timer/: timer.cpp  timer.h
src/gui/: gui.cpp  gui.h  keypad.h  statusBar.cpp  statusBar.h  widget.h
src/states/: cardHolder.h  idle.h  startup.cpp  startup.h  stateFactory.cpp  stateFactory.h
src/states/services/: sale.h
